@@ -23,6 +23,7 @@ Drupal x.x.x, xxxx-xx-xx
     * made themes degrade gracefully in absence of CSS.
     * grouped form elements using '<fieldset>' and '<legend>' tags.
     * added '<label>' tags to form elements.
+- refactored 404 (file not found) handling.
 - documentation:
     * added PHPDoc/Doxygen comments.
 
